# sdl2-tutorial

./: CMakeLists.txt  README.md
01_hello_SDL/: CMakeLists.txt
02_getting_an_image_on_the_screen/: CMakelists.txt  main.cpp
03_event_driven_programming/: CMakeLists.txt  main.cpp
04_key_presses/: CMakeLists.txt  main.cpp
05_optimized_surface_loading_and_soft_stretching/: CMakeLists.txt
06_extension_libraries_and_loading_other_image_formats/: CMakeLists.txt
07_texture_loading_and_rendering/: CMakeLists.txt
08_geometry_rendering/: CMakeLists.txt
09_the_viewport/: CMakeLists.txt
10_color_keying/: CMakeLists.txt
11_clip_rendering_and_sprite_sheets/: CMakeLists.txt  main.cpp
12_color_modulation/: CMakeLists.txt
13_alpha_blending/: CMakeLists.txt
14_animated_sprites_and_vsync/: CMakeLists.txt  main.cpp
15_rotation_and_flipping/: CMakeLists.txt  main.cpp
16_true_type_fonts/: CMakeLists.txt  main.cpp
17_mouse_events/: CMakeLists.txt  main.cpp
18_key_states/: CMakeLists.txt  main.cpp
19_gamepads_and_joysticks/: CMakeLists.txt  main.cpp
20_force_feedback/: CMakeLists.txt  main.cpp
21_sound_effects_and_music/: CMakeLists.txt  main.cpp
22_timing/: CMakeLists.txt  main.cpp
23_advanced_timers/: CMakeLists.txt  main.cpp
24_calculating_frame_rate/: CMakeLists.txt  main.cpp
25_capping_frame_rate/: CMakeLists.txt  main.cpp
26_motion/: CMakeLists.txt  main.cpp
27_collision_detection/: CMakeLists.txt  main.cpp
28_per-pixel_collision_detection/: CMakeLists.txt  main.cpp
29_circular_collision_detection/: CMakeLists.txt  main.cpp
(+13 files in other folders)
